fix comment date not showing up

--- a/app/assets/stylesheets/hnhiring.css.scss
+++ b/app/assets/stylesheets/hnhiring.css.scss
@@ -82,10 +82,14 @@ li.comment {
   padding: 25px 20px 15px 20px;
 }
 
-.user {
+.user a {
   text-decoration: underline;
   color: $green;
   font-weight: bold;
+}
+
+.user .date {
+  color: #767676;
 }
 
 code {
